--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,16 +241,17 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    transition: color .3s ease-in-out;
 
     &::after {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100%;
       height: 2px;
       background-color: $c-light;
-      display: none;
       left: 0;
+      right: 100%;
+      transition: background-color .3s ease-in-out, right .3s ease-in-out;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -265,11 +266,11 @@
       }
     }
 
-    &.active {
-      &::after {
-        display: block;
-      }
-    }
+    //&.active {
+    //  &::after {
+    //    display: block;
+    //  }
+    //}
 
     &:hover,
     &:focus {
@@ -279,6 +280,7 @@
       &::after {
         opacity: 1;
         background-color: $c-purple;
+        right: 0;
       }
     }
   }
