--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -34,7 +34,8 @@
   margin-right: 3rem;
   padding: 0 5.6rem;
   height: 6rem;
-  width: calc(100% - 21rem);
+  margin-left: auto;
+  width: 40px;
   text-transform: uppercase;
   font: inherit;
   font-size: 2.4rem;
@@ -43,7 +44,10 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
-
+  animation-name: scaleWidthFromRight;
+  animation-duration: 1s;
+  animation-delay: .3s;
+  animation-fill-mode: forwards;
   &:focus {
     border: 1px solid $c-purple;
   }
