--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,6 +93,10 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  animation-name: fadeInWithYOTransform;
+  animation-duration: .4s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
