--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -22,6 +22,34 @@
   }
 }
 
+@keyframes fadeInWithXOTransformReverse  {
+  from {
+    opacity: 0;
+    transform: translate3d(-20px,0,0);
+  }
+
+  to {
+
+    opacity: 1;
+    transform: translate3d(0,0,0);
+  }
+}
+
+
+@keyframes fadeInWithXOTransform  {
+  from {
+    opacity: 0;
+    transform: translate3d(20px,0,0);
+  }
+
+  to {
+
+    opacity: 1;
+    transform: translate3d(0,0,0);
+  }
+}
+
+
 @keyframes fadeOutWithXOTransform  {
   from {
     opacity: 1;
