--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -35,7 +35,7 @@
   padding: 1rem 0;
   width: 10rem;
   color: $c-light;
-  opacity: 0;
+
 
   @media (min-width: $stop-scaling) {
     top: -5px;
@@ -82,6 +82,8 @@
   background-color: $c-light;
   border-radius: 50%;
   z-index: 1;
+  transform: scale(0);
+  transition: transform .4s cubic-bezier(0.34, 1.56, 0.64, 1);
 
   @media (max-width: $tablet) and (orientation: portrait) {
     display: block;
@@ -89,6 +91,7 @@
 
   @media (max-width: $mobile) and (orientation: landscape) {
     display: block;
+    transform: scale(1);
   }
 
   &::before,
@@ -130,7 +133,7 @@
 
 .page-header__nav {
   align-items: center;
-  display: none;
+  display: flex;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     position: fixed;
@@ -272,7 +275,7 @@
     //    display: block;
     //  }
     //}
-
+    &.active,
     &:hover,
     &:focus {
       color: $c-purple;
@@ -282,6 +285,14 @@
         opacity: 1;
         background-color: $c-purple;
         right: 0;
+      }
+    }
+
+    &.active {
+      color: #fff;
+
+      &::after {
+        background-color: #fff;
       }
     }
   }
