--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -288,13 +288,16 @@
       }
     }
 
-    &.active {
-      color: #fff;
+    @media (min-width: $tablet) {
+      &.active {
+        color: #fff;
 
-      &::after {
-        background-color: #fff;
+        &::after {
+          background-color: #fff;
+        }
       }
     }
+
   }
 }
 
