--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -117,6 +117,29 @@
   }
 }
 
+.screen--rules.active {
+  .rules__item:before {
+    transform: scale(1);
+  }
+
+  p {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+
+  .rules__link {
+    max-width: 150px;
+    transition: max-width .8s .4s, opacity 0s .4s, color .6s .6s;
+    opacity: 1;
+  }
+}
+
+.screen--rules:not(.active) {
+  .rules__link {
+    color: transparent;
+  }
+}
+
 .rules__item {
   position: relative;
   margin: 0 0 6.2rem;
@@ -144,6 +167,21 @@
     font-size: 1.2rem;
   }
 
+  &:nth-of-type(2)::before,
+  &:nth-of-type(2) p {
+    transition-delay: .1s;
+  }
+
+  &:nth-of-type(3)::before,
+  &:nth-of-type(3) p {
+    transition-delay: .2s;
+  }
+
+  &:last-of-type::before,
+  &:last-of-type p {
+    transition-delay: .3s;
+  }
+
   &::before {
     content: counter(li);
     counter-increment: li;
@@ -159,6 +197,8 @@
     border-radius: 50%;
     line-height: 5rem;
     text-align: center;
+    transform: scale(0);
+    transition: transform .5s cubic-bezier(0.34, 1.56, 0.64, 1) ;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
@@ -179,6 +219,9 @@
 
   p {
     margin: 0;
+    transform: translate3d(20px, 0, 0);
+    opacity: 0;
+    transition: transform .5s, opacity .5s;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
@@ -190,6 +233,8 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+  max-width: 0;
+  opacity: 0;
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
