--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -88,3 +88,13 @@
     width: calc(100% - 21rem);
   }
 }
+
+@keyframes scaleIn {
+  from {
+    transform: scale(0);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
