--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -118,8 +118,12 @@
 }
 
 .screen--rules.active {
-  .rules__item:before {
+  .rules__item::after {
     transform: scale(1);
+  }
+
+  .rules__item::before {
+    opacity: 1;
   }
 
   p {
@@ -128,8 +132,8 @@
   }
 
   .rules__link {
-    max-width: 150px;
-    transition: max-width .8s .4s, opacity 0s .4s, color .6s .6s;
+    max-width: 40rem;
+    transition: max-width .8s .8s, opacity 0s .6s, color .4s 1s;
     opacity: 1;
   }
 }
@@ -167,19 +171,51 @@
     font-size: 1.2rem;
   }
 
-  &:nth-of-type(2)::before,
-  &:nth-of-type(2) p {
-    transition-delay: .1s;
-  }
-
-  &:nth-of-type(3)::before,
-  &:nth-of-type(3) p {
+  &:first-of-type p,
+  &:first-of-type::before {
     transition-delay: .2s;
   }
 
-  &:last-of-type::before,
-  &:last-of-type p {
+  &:nth-of-type(2)::after{
+    transition-delay: .1s;
+  }
+
+  &:nth-of-type(2) p,
+  &:nth-of-type(2)::before {
     transition-delay: .3s;
+  }
+
+  &:nth-of-type(3)::after {
+    transition-delay: .2s;
+  }
+
+  &:nth-of-type(3) p,
+  &:nth-of-type(3)::before {
+    transition-delay: .4s;
+  }
+
+  &:last-of-type::after {
+    transition-delay: .3s;
+  }
+
+  &:last-of-type p,
+  &:last-of-type::before {
+    transition-delay: .5s;
+  }
+
+
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 4.5rem;
+    height: 4.5rem;
+    background-color: $c-purple;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: transform .5s cubic-bezier(0.34, 1.56, 0.64, 1) ;
   }
 
   &::before {
@@ -193,12 +229,12 @@
     font-family: $font-alt;
     font-weight: 400;
     font-size: 2.4rem;
-    background-color: $c-purple;
-    border-radius: 50%;
     line-height: 5rem;
+    text-transform: none;
     text-align: center;
-    transform: scale(0);
-    transition: transform .5s cubic-bezier(0.34, 1.56, 0.64, 1) ;
+    opacity: 0;
+    z-index: 1;
+    transition: opacity .5s cubic-bezier(0.34, 1.56, 0.64, 1);
 
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
@@ -221,7 +257,7 @@
     margin: 0;
     transform: translate3d(20px, 0, 0);
     opacity: 0;
-    transition: transform .5s, opacity .5s;
+    transition: transform .5s, opacity .6s;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
@@ -233,7 +269,7 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
-  max-width: 0;
+  max-width: 5rem;
   opacity: 0;
 
   @media (min-width: $stop-scaling) {
