--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -8,6 +8,32 @@
   }
 }
 
+@keyframes wonderScale {
+  0% {
+    transform: scale(0);
+  }
+
+  20% {
+    transform: scale(1);
+  }
+
+
+  40% {
+    transform: scale(0);
+  }
+
+  60% {
+    transform: scale(1);
+  }
+
+  80% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
 
 @keyframes simpleHide {
   to {
